browser/css/cool.css
/* ... */
.hyperlink-pop-up-link-row {
	display: flex;
	align-items: center;
	padding: 6px;
}

.hyperlink-pop-up-container a {
	flex: 1;
	min-width: 0;
	white-space: nowrap;
	overflow: hidden;
	text-overflow: ellipsis;
	color: #0078A8;
	font-size: 0.88rem;
}

.hyperlink-popup-btn {
	display: inline-block;
	margin-left: 4px;
	vertical-align: middle;
	width: 26px;
	height: 26px;
}

.hyperlink-popup-btn:hover {
	background-color: var(--color-background-darker);
	border-radius: 50%;
}

.functiontooltip {
	white-space: nowrap;
	max-width: fit-content !important;
}

.leaflet-canvas-container .cell-cursor-data {
	border-style: solid; /* required for ie11 */
	display: none; /* prevent cypress failure */

	border-top-color: rgba(var(--doc-type), 1); /* color */
	border-top-width: 2px; /* weight */
}

.selections-data {
	border-style: solid; /* required for ie11 */
	display: none; /* prevent cypress failure */

	background-color: rgba(var(--doc-type), 1); /* fill color */
	opacity: 0.25; /* opacity */
	border-top-width: 1px; /* weight */
}

.leaflet-canvas-container .splitters-data {
	border-style: solid; /* required for ie11 */
	display: none; /* prevent cypress failure */

	color: #b6b6b6; /* color */
	opacity: 1; /* opacity */
	border-top-width: 1px; /* weight */
}

#product-name {
	text-align: center;
	justify-content: center;
	flex-grow: 1;
}

#about-dialog {
	display: none;
}

#about-dialog-container, #about-dialog-header {
	display: flex;
	flex-flow: row nowrap;
	place-content: stretch flex-start;
	align-items: stretch;
}

#about-dialog-container .spacer {
	height: 54px;
}

#about-dialog-logos {
	flex-grow: 1;
	flex-flow: column nowrap;
	place-items: stretch;
}

#about-dialog-container *, #about-dialog-header * {
	display: flex;
	flex-wrap: wrap;
}

#integrator-logo {
	align-items: center;
	justify-content: center;
	flex-grow: 0;
}

#product-logo {
	align-items: center;
	justify-content: right;
	flex-grow: 1;
	background-repeat: no-repeat;
	background-size: 82px;
	background-position: right center;
}
#about-dialog-info-container {
	align-items: center;
	justify-content: flex-start;
	flex-grow: 1;
}
#about-dialog-info {
	flex-direction: column;
}

/* ovveride some jquery css for contentcontrol datepicker */
#datepicker .ui-state-highlight {
	background: var(--color-background-dark) !important;
	font-weight: bold !important;
}

#datepicker .ui-state-default {
	background: var(--color-main-background);
	font-weight: normal;
	color: var(--color-main-text);
	border: 1px solid var(--color-border-lighter);
}

#datepicker .ui-state-active {
	border: 1px solid var(--color-border-dark);
}

#datepicker .ui-state-hover {
	border: 1px solid var(--color-border-darker);
	background: var(--color-background-lighter);
}

#datepicker .ui-datepicker-next span {
	background-image: url('images/lc_nextrecord.svg');
}

#datepicker .ui-icon-circle-triangle-e {
	background-position: 0;
}

#datepicker .ui-datepicker-prev span {
	background-image: url('images/lc_prevrecord.svg');
}

#datepicker .ui-icon-circle-triangle-w {
	background-position: 0;
}

#mentionPopup,
#mentionPopupList {
	min-width: 100px;
	min-height: 100px;
}

#mentionPopup .lokdialog.ui-dialog-content.ui-widget-content {
	display: flex;
	justify-content: center;
	align-items: center;
	min-height: 100px;
	min-width: 100px;
}

#mentionPopup .ui-dialog-content {
	padding: 0;
}

.username-pop-up {
	min-width: 110px;
	padding-inline: 8px;
	height: 45px;
	position: absolute;
	text-align: center;
	z-index: 11;
	font-family: var(--cool-font);
	font-size: var(--default-font-size);
	border-radius: var(--border-radius-large);
	box-shadow: 0 0 2px 1px var(--color-box-shadow);
}

.username-pop-up p {
	line-height: 45px;
	padding: 0;
	margin: auto;
	color: white;
}

.username-pop-up .arrow-div {
	width: 20px;
	height: 20px;
	transform: rotate(45deg);
	display: inline-block;
	position: relative;
	top: calc(-10px - var(--border-radius));
	border-radius: var(--border-radius);
}


#hyperlink-pop-up-preview:not(:empty) {
	margin-bottom: 4px;
	display: flex;
	flex-direction: column;
	justify-content: center;
	overflow: hidden;
	border-radius: calc(var(--border-radius) - 2px);
}

#hyperlink-pop-up-preview img {
	max-height: 150px;
	border-radius: calc(var(--border-radius) - 2px);
	object-fit: cover;
	width: calc(100% - 10px);
	margin: 4px auto;
	border: 1px solid var(--color-border-darker);
}

#hyperlink-pop-up-preview p {
	color: var(--color-main-text);
	white-space: nowrap;
	text-overflow: ellipsis;
	overflow: hidden;
	font-size: 0.80rem;
	line-height: normal;
	padding: 0px 6px;
	margin-block: 12px 0px;
}

.prevent-select {
	user-select: none;
}

[contenteditable] { /* in old Safari, omitting this prevents editing */
	user-select: text;
}

.progress-bar {
	width: 100%;
	height: 2px;
	border: none;
	background-color: var(--color-background-dark);
	overflow: hidden;
	position: relative;
	display: none;
	appearance: none;
}

.progress-bar::-webkit-progress-bar {
	background-color: transparent;
}

.progress-bar::-webkit-progress-value {
	background-color: var(--color-main-text);
}

.progress-bar::-moz-progress-bar {
	background-color: var(--color-main-text);
}

#slideshow-cypress-iframe {
	position: absolute;
	top: 0;
	left: 0;
	bottom: 0;
	right: 0;
	z-index: 1000000;
	background-color: black;
	border: none;

	/* hairline-fix */
	width: calc(100% + 2px);
	height: calc(100% + 2px);
	transform: translate(-1px, -1px);
}

.table-add-col-row-marker {
	border-radius: var(--border-radius);
	background-color: var(--color-insert-marker-background) !important;
	box-shadow: 1px var(--color-box-shadow);
	background: url('images/insert-plus-marker.svg') no-repeat center center /20px;
}

.table-add-col-row-marker.hovered {
	background-color: var(--color-insert-marker-background-dark) !important;
	background: url('images/insert-plus-marker-hover.svg') no-repeat center center /20px;
}
/* ... */

